--- a/index.html
+++ b/index.html
@@ -7,54 +7,18 @@
     
     <!-- PWA & SEO Meta Tags -->
     <meta name="description" content="An interactive web application to explore the network of Canadian politics, politicians, and their policies." />
-    <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="%BASE_URL%manifest.json" />
     <meta name="theme-color" content="#1e293b" />
 
     <!-- iOS PWA Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Civic Lens" />
-    <link rel="apple-touch-icon" href="/assets/icon-192.png" />
+  <link rel="apple-touch-icon" href="%BASE_URL%assets/icon-192.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-            },
-            animation: {
-              'fade-in': 'fadeIn 0.3s ease-out forwards',
-              'slide-up': 'slideUp 0.4s cubic-bezier(0.25, 1, 0.5, 1) forwards',
-              'slide-in-left': 'slideInLeft 0.3s ease-out forwards',
-              'slide-out-left': 'slideOutLeft 0.3s ease-out forwards',
-            },
-            keyframes: {
-              fadeIn: {
-                '0%': { opacity: 0 },
-                '100%': { opacity: 1 },
-              },
-              slideUp: {
-                '0%': { transform: 'translateY(30px)', opacity: 0 },
-                '100%': { transform: 'translateY(0)', opacity: 1 },
-              },
-              slideInLeft: {
-                '0%': { transform: 'translateX(-100%)' },
-                '100%': { transform: 'translateX(0)' },
-              },
-              slideOutLeft: {
-                '0%': { transform: 'translateX(0)' },
-                '100%': { transform: 'translateX(-100%)' },
-              },
-            }
-          },
-        },
-      }
-    </script>
   <script type="importmap">
 {
   "imports": {
@@ -65,7 +29,16 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/google-genai@^0.1.0"
+  }
+}
+</script>
+<link rel="stylesheet" href="/src/index.css">
 </head>
   <body class="bg-slate-900 text-slate-200">
     <div id="root"></div>
