--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Civic Lens</title>
-    
+
     <!-- PWA & SEO Meta Tags -->
-    <meta name="description" content="An interactive web application to explore the network of Canadian politics, politicians, and their policies." />
-  <link rel="manifest" href="%BASE_URL%manifest.json" />
+    <meta
+      name="description"
+      content="An interactive web application to explore the network of Canadian politics, politicians, and their policies."
+    />
+    <link rel="manifest" href="%BASE_URL%manifest.json" />
     <meta name="theme-color" content="#1e293b" />
 
-  <!-- iOS PWA Meta Tags -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <!-- non-deprecated equivalent for some platforms -->
-  <meta name="mobile-web-app-capable" content="yes" />
+    <!-- Icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="%BASE_URL%assets/PoliVis_rounded.png" />
+    <link rel="shortcut icon" href="%BASE_URL%assets/PoliVis_rounded.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="%BASE_URL%assets/PoliVis_rounded.png" />
+
+    <!-- iOS PWA Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- non-deprecated equivalent for some platforms -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Civic Lens" />
-  <link rel="apple-touch-icon" href="%BASE_URL%assets/PoliVis_rounded.png" />
+    <meta name="msapplication-TileColor" content="#0f172a" />
+    <meta name="msapplication-TileImage" content="%BASE_URL%assets/PoliVis_rounded.png" />
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +43,10 @@
       <link rel="stylesheet" href="/src/index.css">
 </head>
   <body class="bg-slate-900 text-slate-200">
-    <div id="root"></div>
+    <div id="app-splash" class="splash-screen" role="presentation" aria-hidden="true">
+      <img src="%BASE_URL%assets/PoliVis_splash.png" alt="PoliVis splash screen" class="splash-screen__image" />
+    </div>
+    <div id="root" class="app-root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
